--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon server/server.js",
-    "client": "cd client && npm run dev",
+    "client": "cd client && npm run dev -- --host",
     "start": "node server/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
