--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.50.1",
     "framer-motion": "^11.2.12",
     "locomotive-scroll": "^5.0.0-beta.13",
     "react": "^18.3.1",
